# burust

./: .gitignore  README.md  TODO.md  burust.code-workspace
burengine/: Cargo.toml
burengine/src/: engine.rs  game.rs  graphics.rs  lib.rs  renderer.rs  sprite.rs  text.rs  texture_manager.rs  types.rs  ui_manager.rs
burengine/src/ui/: button.rs  config.rs  image.rs  input_box.rs  label.rs  layout.rs  manager.rs  mod.rs  pane.rs  renderer.rs  selector.rs  square.rs
burengine/src/utils/: config.rs
burgame/: Cargo.toml
burgame/resources/: ui_config.json
burgame/src/: example_game.rs  lib.rs  main.rs  ui_manager.rs
burgame/src/ui/: button.rs  config.rs  image.rs  input_box.rs  label.rs  layout.rs  mod.rs  pane.rs  renderer.rs  selector.rs  square.rs
