[package]
name = "burengine"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
as-any = { version = "0.1.0" }

[dependencies.sdl2]
version = "0.37.0"
default-features = false
features = ["image", "unsafe_textures", "ttf"]
